# ecs

./: .gitignore  CMakeLists.txt  conanfile.txt
include/: Application.hpp
include/ecs/components/: Renderable.hpp  Transform.hpp
include/ecs/core/: Component.hpp  Entity.hpp  EntityManager.hpp  EntitySystemTypes.hpp  System.hpp
include/ecs/systems/: RenderSystem.hpp  TransformSystem.hpp
include/utils/: CompileTimeAutoId.hpp  Vector2D.hpp
src/: main.cpp
src/ecs/components/: Renderable.cpp  Transform.cpp
src/ecs/core/: Component.cpp  Entity.cpp  EntityManager.cpp  System.cpp
src/ecs/systems/: RenderSystem.cpp  TransformSystem.cpp
src/utils/: Vector2D.cpp
